// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assembly-parser should give an error for malformed assembly 1`] = `"ParseError: Expected 1 argument at test.asm:1"`;

exports[`assembly-parser should give an error for too big number  1`] = `"ParseError: Number argument is too big, max value is 9007199254740991, but 2707685248164858261307045101702230179137145581421695874189921465443966120903931272499975005961073806735733604454495675614232575 given at test.asm:1"`;

exports[`assembly-parser should not parse assembly with error 1`] = `"ParseError: Expected "-", "0", "[", "\\"", "boc{", "b{", "c", "embed", "exotic", "ref", "s", "x{", "{", digit, or identifier at test.asm:1"`;

exports[`assembly-parser should parse assembly with invalid raw pushref 1`] = `
"PUSHREF {
    embed x{22221}
}
"
`;

exports[`assembly-parser should parse assembly with raw pushref 1`] = `
"PUSHREF {
    PUSHINT_4 1
}
"
`;

exports[`assembly-parser should parse big binary number 1`] = `
"PUSHINT_LONG 99361157907245371849534687261600163536440705095468583112899330433667260971928120725176218165033374588831214764616388685194981122823348121052434385602635592909085118465334393955216978280422300468816831948397854000057142198644227702783
PUSHINT_LONG -99361157907245371849534687261600163536440705095468583112899330433667260971928120725176218165033374588831214764616388685194981122823348121052434385602635592909085118465334393955216978280422300468816831948397854000057142198644227702783
ADD
"
`;

exports[`assembly-parser should parse big decimal number 1`] = `
"PUSHINT_LONG 999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
PUSHINT_LONG -999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
ADD
"
`;

exports[`assembly-parser should parse big hex number 1`] = `
"PUSHINT_LONG 2707685248164858261307045101702230179137145581421695874189921465443966120903931272499975005961073806735733604454495675614232575
PUSHINT_LONG -2707685248164858261307045101702230179137145581421695874189921465443966120903931272499975005961073806735733604454495675614232575
ADD
"
`;

exports[`assembly-parser should parse big octal number 1`] = `
"PUSHINT_LONG 794889263257962974796277498092801308291525640763748664903194643469338087775424965801409745320266996710649718116931109481559848982586784968419475084821084743272680947722675151641735826243378403750534655587182832000457137589153821622271
PUSHINT_LONG -794889263257962974796277498092801308291525640763748664903194643469338087775424965801409745320266996710649718116931109481559848982586784968419475084821084743272680947722675151641735826243378403750534655587182832000457137589153821622271
ADD
"
`;

exports[`assembly-parser should parse binary number 1`] = `
"PUSHINT_16 1023
PUSHINT_16 -1023
ADD
"
`;

exports[`assembly-parser should parse binary number with _ 1`] = `
"PUSHINT_16 1023
PUSHINT_16 -1023
ADD
"
`;

exports[`assembly-parser should parse decimal number 1`] = `
"PUSHINT_16 999999
PUSHINT_16 -999999
ADD
"
`;

exports[`assembly-parser should parse decimal number with _ 1`] = `
"PUSHINT_16 999999
PUSHINT_16 -999999
ADD
"
`;

exports[`assembly-parser should parse hex number 1`] = `
"PUSHINT_16 4095
PUSHINT_16 -4095
ADD
"
`;

exports[`assembly-parser should parse hex number with _ 1`] = `
"PUSHINT_16 4095
PUSHINT_16 -4095
ADD
"
`;

exports[`assembly-parser should parse octal number 1`] = `
"PUSHINT_16 32767
PUSHINT_16 -32767
ADD
"
`;

exports[`assembly-parser should parse octal number with _ 1`] = `
"PUSHINT_16 32767
PUSHINT_16 -32767
ADD
"
`;

exports[`assembly-parser should parse simple assembly 1`] = `
"PUSHINT_4 10
PUSHINT_4 5
ADD
"
`;
